--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -7,9 +7,7 @@
     <ul>
       <li>Static init-only attributes are removed from the custom element itself immediately after initialization. This is done to prevent confusion and avoid conflicts between attributes and properties during the component lifecycle. Their values are still applied to the relevant internal elements, so the component's behavior remains consistent with the initial configuration.<br><br>
       
-      To update these values dynamically, use the corresponding JavaScript properties on the component instance.<br><br>
-
-      By separating initialization from update logic, this approach also improves performance by eliminating the need to observe attribute changes or reflect property updates back to attributes.</li>
+      To update these values dynamically, use the corresponding JavaScript properties on the component instance.</li>
     </ul>
   </div>
   <div class="info">
@@ -36,7 +34,7 @@
       <li>size - static, optional. Default: medium.<br>
         Available values: small, medium, large.</li>
       <li>shape - static, optional. Default: rounded.<br>
-        Defines the shape of the input corners: rounded, pill, or square.</li>
+        Sets the corner style: rounded, pill, or square.</li>
     </ul>
   </div>
 </section>
