--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -105,7 +105,7 @@
       </div>
       <div class="code">
         <code>
-          &lt;ui-textarea value="Disabled" disabled&gt;Text&lt;/ui-textarea&gt;
+          &lt;ui-textarea value="Disabled" disabled&gt;&lt;/ui-textarea&gt;
         </code>
       </div>
     </div>
