--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -23,8 +23,6 @@
         Text displayed when the textarea is empty. Update via property: component.placeholder = 'Placeholder'.</li>
       <li>height - static, optional. Default: 40.
         <br>Component height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.</li>
-      <li>clearable - static, optional.
-        <br>Adds a clear button, which, when clicked, removes all content from the form control.</li>
       <li>required - static, optional.
         <br>Defines whether the component is required.</li>
       <li>disabled - reactive, optional.
@@ -45,7 +43,7 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-textarea shape="rounded"&gt;&lt;/ui-textarea&gt;</div>
+          <div>&lt;ui-textarea&gt;&lt;/ui-textarea&gt;</div>
           <div>&lt;ui-textarea shape="square"&gt;&lt;/ui-textarea&gt;</div>
         </code>
       </div>
