--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -95,16 +95,16 @@
     <div>Text and icon on one side</div>
     <div class="example">
       <div class="preview">
-        <ui-button text="Settings" icon-leading="settings"></ui-button>
-        <ui-button text="Settings" icon-trailing="settings"></ui-button>
+        <ui-button icon-leading="settings">Button</ui-button>
+        <ui-button icon-trailing="settings">Button</ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button text="Settings" icon-leading="settings"&gt;&lt;/ui-button&gt;</div>
-          <div>&lt;ui-button text="Settings" icon-trailing="settings"&gt;&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button icon-leading="settings"&gt;Button&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button icon-trailing="settings"&gt;Button&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -114,14 +114,14 @@
     <div>Text with icons on both sides</div>
     <div class="example">
       <div class="preview">
-        <ui-button text="Settings" icon-leading="settings" icon-trailing="settings"></ui-button> 
+        <ui-button icon-leading="settings" icon-trailing="settings">Button</ui-button> 
       </div>
       <div class="toolbar">
         <span>HTML</span>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button text="Settings" icon-leading="settings" icon-trailing="settings"&gt;&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button icon-leading="settings" icon-trailing="settings"&gt;Button&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -131,8 +131,8 @@
     <div>Loading</div>
     <div class="example">
       <div class="preview">
-        <ui-button id="clickMe" onclick="load()" onkeydown="load()" text="Click me"></ui-button>
-        <ui-button onclick="reset()" onkeydown="reset()" text="Reset"></ui-button>
+        <ui-button id="clickMe" onclick="load()" onkeydown="load()">Click me</ui-button>
+        <ui-button onclick="reset()" onkeydown="reset()">Reset</ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
