--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -25,7 +25,7 @@
       <li>loading - reactive, optional.
         <br>Controls the loading state of the component.</li>
       <li>shape - static, optional. Default: rounded.<br>
-        Sets the corner style: rounded, pill, or square.</li>
+        Defines the shape of the component corners: rounded, pill, or square.</li>
     </ul>
   </div>
 </section>
@@ -36,18 +36,18 @@
     <div>Shape (default: rounded)</div>
     <div class="example">
       <div class="preview">
-        <ui-button shape="rounded">Button</ui-button>
-        <ui-button shape="pill">Button</ui-button>
-        <ui-button shape="square">Button</ui-button>
+        <ui-button shape="rounded" text="Button"></ui-button>
+        <ui-button shape="pill" text="Button"></ui-button>
+        <ui-button shape="square" text="Button"></ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button shape="rounded"&gt;Button&lt;/ui-button&gt;</div>
-          <div>&lt;ui-button shape="pill"&gt;Button&lt;/ui-button&gt;</div>
-          <div>&lt;ui-button shape="square"&gt;Button&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button shape="rounded" text="rounded"&gt;&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button shape="pill" text="pill"&gt;&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button shape="square" text="square"&gt;&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -57,18 +57,18 @@
     <div>Size (default: medium)</div>
     <div class="example">
       <div class="preview">
-        <ui-button size="small">Button</ui-button>
-        <ui-button>Button</ui-button>
-        <ui-button size="large">Button</ui-button>
+        <ui-button size="small" text="Button"></ui-button>
+        <ui-button text="Button"></ui-button>
+        <ui-button size="large" text="Button"></ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button size="small"&gt;Button&lt;/ui-button&gt;</div>
-          <div>&lt;ui-button&gt;Button&lt;/ui-button&gt;</div>
-          <div>&lt;ui-button size="large"&gt;Button&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button size="small"&gt;&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button&gt;&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button size="large"&gt;&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -78,14 +78,14 @@
     <div>Disabled</div>
     <div class="example">
       <div class="preview">
-        <ui-button disabled>Button</ui-button>
+        <ui-button text="Settings" disabled></ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button disabled&gt;Button&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button text="Settings" disabled&gt;&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -95,16 +95,16 @@
     <div>Text and icon on one side</div>
     <div class="example">
       <div class="preview">
-        <ui-button icon-leading="settings">Button</ui-button>
-        <ui-button icon-trailing="settings">Button</ui-button>
+        <ui-button text="Settings" icon-leading="settings"></ui-button>
+        <ui-button text="Settings" icon-trailing="settings"></ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button icon-leading="settings"&gt;Button&lt;/ui-button&gt;</div>
-          <div>&lt;ui-button icon-trailing="settings"&gt;Button&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button text="Settings" icon-leading="settings"&gt;&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button text="Settings" icon-trailing="settings"&gt;&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -114,14 +114,14 @@
     <div>Text with icons on both sides</div>
     <div class="example">
       <div class="preview">
-        <ui-button icon-leading="settings" icon-trailing="settings">Button</ui-button> 
+        <ui-button text="Settings" icon-leading="settings" icon-trailing="settings"></ui-button> 
       </div>
       <div class="toolbar">
         <span>HTML</span>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button icon-leading="settings" icon-trailing="settings"&gt;Button&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button text="Settings" icon-leading="settings" icon-trailing="settings"&gt;&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -131,8 +131,8 @@
     <div>Loading</div>
     <div class="example">
       <div class="preview">
-        <ui-button id="clickMe" onclick="load()" onkeydown="load()">Click me</ui-button>
-        <ui-button onclick="reset()" onkeydown="reset()">Reset</ui-button>
+        <ui-button id="clickMe" onclick="load()" onkeydown="load()" text="Click me"></ui-button>
+        <ui-button onclick="reset()" onkeydown="reset()" text="Reset"></ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
