--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -184,6 +184,7 @@
         <code>
           <div>&lt;ui-button size="small | medium | large"&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
+          <div>&nbsp;&lt;ui-text&gt;Button&lt;/ui-text&gt;</div>
           <div>&lt;/ui-button&gt;</div>
         </code>
       </div>
