--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -5,8 +5,7 @@
   <div class="info">
     <h2>Usage</h2>
     <ul>
-      <li>At least one of these attributes is required to create a button: ui-text, ui-icon.</li>
-      <li>For a button with a single icon, use either icon-leading or icon-trailing.</li>
+      <li>To create a button, you must include at least one of the following: ui-text or ui-icon. You can also combine them.</li>
     </ul>
   </div>
   <div class="info">
