--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -32,7 +32,7 @@
     <div class="example">
       <div class="preview">
         <ui-button>Button</ui-button>
-        <ui-button>
+        <ui-button display="icon-only">
           <ui-icon icon="settings"></ui-icon>
         </ui-button>
       </div>
@@ -46,6 +46,23 @@
           <div>&lt;ui-button&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="icon"&gt;&lt;/ui-icon&gt;</div>
           <div>&lt;/ui-button&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Minimal</div>
+    <div class="example">
+      <div class="preview">
+        <ui-button display="full-width">Button</ui-button>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-button display="full-width"&gt;Button&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -152,7 +169,7 @@
     <div>Text and icon on one side</div>
     <div class="example">
       <div class="preview">
-        <ui-button>
+        <ui-button size="xxx-large">
           <ui-icon icon="article"></ui-icon>
           <ui-text>Button</ui-text>
         </ui-button>
