--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -5,38 +5,40 @@
   <div class="info">
     <h2>Usage</h2>
     <ul>
-      <li>To create a button, you must include at least one of the following inside &lt;ui-button&gt;:
-        <ul>
-          <li>plain text (e.g., Submit)</li>
-          <li>a &lt;ui-text&gt; component</li>
-          <li>a &lt;ui-icon&gt; component</li>
-        </ul>
-      You can combine them freely - for example, both text and icon together.<br><br>
-      If you're using multiple elements (e.g. an icon and text), it's recommended to wrap the text inside a &lt;ui-text&gt; component for consistent styling, spacing, and alignment.</li>
+      <li>
+        The component acts as both a button and a wrapper. It can contain text, icons, or both - in any order you prefer.
+      </li>
+      <li>
+        To make the button square, use aspect-ratio="1/1".
+      </li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
       <li>aria-label - static (required).<br>
-        Must be set manually for accessibility.</li>
+        Must be set manually for accessibility.
+      </li>
       <li>disabled - reactive (optional).<br>
-        Controls the disabled state of the component.</li>
+        Controls the disabled state of the component.
+      </li>
       <li>loading - reactive (optional).<br>
-        Controls the loading state of the component.</li>
+        Controls the loading state of the component.
+      </li>
       <li>size - static (optional). Default: medium.<br>
-        Available values: small, medium, large.</li>
+        Available values: small, medium, large.
+      </li>
       <li>shape - static (optional). Default: rounded.<br>
-        Sets the corner style: rounded, pill, sharp, or circle.</li>
+        Sets the corner style: rounded, pill, sharp, or circle.
+      </li>
       <li>color - static (optional). Default: gray.<br>
-        Specifies the color scheme.</li>
-      <li>display - static (optional).<br>
-        Defines component dimensions.<br><br>
-        Available options:
-        <ul>
-          <li>width-full - sets width to 100%</li>
-          <li>aspect-square - enforces 1:1 aspect ratio</li>
-        </ul>
+        Specifies the color scheme.
+      </li>
+      <li>aspect-ratio="1/1" - static (optional).<br>
+        Makes the component square using a 1:1 aspect ratio.
+      </li>
+      <li>width-mode="full" - static (optional).<br>
+        Expands the component to take up 100% of the available width.
       </li>
     </ul>
   </div>
@@ -62,10 +64,37 @@
   </div>
 
   <div class="content-item">
-    <div>Icon Only</div>
+    <div>Text Only, Size Attribute (default: medium)</div>
     <div class="example">
       <div class="preview">
-        <ui-button display="aspect-square">
+        <ui-button size="small">Button</ui-button>
+        <ui-button size="medium">Button</ui-button>
+        <ui-button size="large">Button</ui-button>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-button size="small | medium | large"&gt;</div>
+          <div>&nbsp;Button</div>
+          <div>&lt;/ui-button&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Icon Only, Size Attribute (default: medium), Square Aspect Ratio</div>
+    <div class="example">
+      <div class="preview">
+        <ui-button aspect-ratio="1/1" size="small">
+          <ui-icon icon="settings"></ui-icon>
+        </ui-button>
+        <ui-button aspect-ratio="1/1" size="medium">
+          <ui-icon icon="settings"></ui-icon>
+        </ui-button>
+        <ui-button aspect-ratio="1/1" size="large">
           <ui-icon icon="settings"></ui-icon>
         </ui-button>
       </div>
@@ -74,7 +103,7 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button display="aspect-square"&gt;</div>
+          <div>&lt;ui-button aspect-ratio="1/1" size="small | medium | large"&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
           <div>&lt;/ui-button&gt;</div>
         </code>
@@ -86,14 +115,14 @@
     <div>Full Width</div>
     <div class="example">
       <div class="preview">
-        <ui-button display="full">Button</ui-button>
+        <ui-button width-mode="full">Button</ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button display="full-width"&gt;Button&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button width-mode="full"&gt;Button&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -122,16 +151,16 @@
   </div>
 
   <div class="content-item">
-    <div>Shape (default: rounded)</div>
+    <div>Icon Only, Shape Attribute (default: rounded), Square Aspect Ratio</div>
     <div class="example">
       <div class="preview">
-        <ui-button shape="rounded">
+        <ui-button shape="rounded" aspect-ratio="1/1">
           <ui-icon icon="settings"></ui-icon>
         </ui-button>
-        <ui-button shape="circle">
+        <ui-button shape="circle" aspect-ratio="1/1">
           <ui-icon icon="settings"></ui-icon>
         </ui-button>
-        <ui-button shape="sharp">
+        <ui-button shape="sharp" aspect-ratio="1/1">
           <ui-icon icon="settings"></ui-icon>
         </ui-button>
       </div>
@@ -140,39 +169,8 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button shape="rounded | sharp | circle"&gt;</div>
+          <div>&lt;ui-button shape="rounded | sharp | circle" aspect-ratio="1/1"&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
-          <div>&lt;/ui-button&gt;</div>
-        </code>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
-    <div>Size (default: medium)</div>
-    <div class="example">
-      <div class="preview">
-        <ui-button size="small">
-          <ui-icon icon="article"></ui-icon>
-          Button
-        </ui-button>
-        <ui-button size="medium">
-          <ui-icon icon="article"></ui-icon>
-          Button
-        </ui-button>
-        <ui-button size="large">
-          <ui-icon icon="article"></ui-icon>
-          Button
-        </ui-button>
-      </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-        <code>
-          <div>&lt;ui-button size="small | medium | large"&gt;</div>
-          <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
-          <div>&nbsp;Button</div>
           <div>&lt;/ui-button&gt;</div>
         </code>
       </div>
@@ -184,7 +182,7 @@
     <div class="example">
       <div class="preview">
         <ui-button disabled>
-          <ui-text>Button</ui-text>
+          Button
         </ui-button>
       </div>
       <div class="toolbar">
@@ -192,9 +190,7 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button disabled&gt;</div>
-          <div>&nbsp;&lt;ui-text&gt;Button&lt;/ui-text&gt;</div>
-          <div>&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button disabled&gt;Button&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
@@ -204,12 +200,12 @@
     <div>Text and icon on one side</div>
     <div class="example">
       <div class="preview">
-        <ui-button size="xxx-large">
+        <ui-button>
           <ui-icon icon="article"></ui-icon>
-          <ui-text>Button</ui-text>
+          Button
         </ui-button>
         <ui-button>
-          <ui-text>Button</ui-text>
+          Button
           <ui-icon icon="article"></ui-icon>
         </ui-button>
       </div>
@@ -220,11 +216,11 @@
         <code>
           <div>&lt;ui-button&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
-          <div>&nbsp;&lt;ui-text&gt;Button&lt;/ui-text&gt;</div>
+          <div>&nbsp;Button</div>
           <div>&lt;/ui-button&gt;</div>
           <br>
           <div>&lt;ui-button&gt;</div>
-          <div>&nbsp;&lt;ui-text&gt;Button&lt;/ui-text&gt;</div>
+          <div>&nbsp;Button</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
           <div>&lt;/ui-button&gt;</div>
         </code>
@@ -233,12 +229,12 @@
   </div>
 
   <div class="content-item">
-    <div>Text with icons on both sides</div>
+    <div>Text with Icons on Both Sides</div>
     <div class="example">
       <div class="preview">
         <ui-button>
           <ui-icon icon="article"></ui-icon>
-          <ui-text>Button</ui-text>
+          Button
           <ui-icon icon="send"></ui-icon>
         </ui-button>
       </div>
@@ -249,7 +245,7 @@
         <code>
           <div>&lt;ui-button&gt;</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
-          <div>&nbsp;&lt;ui-text&gt;Button&lt;/ui-text&gt;</div>
+          <div>&nbsp;Button</div>
           <div>&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;</div>
           <div>&lt;/ui-button&gt;</div>
         </code>
@@ -269,9 +265,7 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button loading aria-label="Click me"&gt;</div>
-          <div>&nbsp;&lt;ui-text&gt;Click me&lt;/ui-text&gt;</div>
-          <div>&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button loading&gt;Click me&lt;/ui-button&gt;</div>
         </code>
       </div>
     </div>
